--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	  {% assign url = dest | downcase %}
 	  {% if dest == "Home" %} {% assign url = "/" %} {% endif %}
 	  {% if dest == "Shop" %} {% assign url = "https://www.redbubble.com/people/devicatoutlet/shop/" %} {% endif %}
-          <li class="nav-item active">
+          <li class="nav-item{% if page.title == dest %} active{% endif %}">
             <a class="nav-link" href="{{ url }}">{{ dest }}{% if page.title == dest %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
 	 {% endfor %}
