--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,15 @@
 
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-	 {% assign pages = "Home Gallery Characters Goals Shop About" | split: " " %}
-	 {% for dest in pages %}
-	  {% assign url = dest | downcase %}
-	  {% if dest == "Home" %} {% assign url = "/" %} {% endif %}
-	  {% if dest == "Shop" %} {% assign url = "https://www.redbubble.com/people/devicatoutlet/shop/" %} {% endif %}
+	 {% assign pages = "Home Gallery Characters Goals Shop About" | split: " " -%}
+	 {%- for dest in pages -%}
+	  {%- assign url = dest | downcase -%}
+	  {%- if dest == "Home" -%} {%- assign url = "/" -%} {%- endif -%}
+	  {%- if dest == "Shop" -%} {%- assign url = "https://www.redbubble.com/people/devicatoutlet/shop/" -%} {%- endif -%}
           <li class="nav-item{% if page.title == dest %} active{% endif %}">
             <a class="nav-link" href="{{ url }}">{{ dest }}{% if page.title == dest %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
-	 {% endfor %}
+	 {% endfor -%}
         </ul>
       </div>
     </nav>
