Remove the Jumbotron from all but the home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,13 +34,14 @@
         </ul>
       </div>
     </nav>
-
+    {% if page.title == "Home" %}
     <!-- Jumbotron -->
     <section class="jumbotron text-center parallax">
               <div id="twitch-embed">
 
               </div>
     </section>
+    {% endif %}
 
   <div>
     <!-- Cards -->
