Update social media links in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,10 +63,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <p>
-                    <a href="#"><i class="fa fa-twitch fa-2x" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://twitch.tv/DeviCat"><i class="fa fa-twitch fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/devicatoutlet/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/DeviCatOutlet"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.youtube.com/channel/UC6beUHODrgLKEIXdY6VLp_A"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
                 </p>
             </div>
         </div>
