Add in the top-of-page info (though it may need to change)

--- a/css/main.css
+++ b/css/main.css
@@ -116,3 +116,10 @@ a {
 #goals ~ ul ul {
 	list-style: none;
 }
+
+#characters ~ p img {
+	width: 1.25em;
+}
+#characters ~ ul {
+	text-align: left;
+}
