Migrate the modal into the layout, allowing other pages to use it too
Currently none actually DO use it, but that's only because there's no JS to
make it happen. Adjusting the selector in js/custom.js could instantly make
more images clickable.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,12 @@
   </div>
 
 
+<div class="modal fade" id="imagemodal">
+	<div class="modal-dialog">
+		<img src="" class="imagepreview">
+		<div id="modal-caption"></div>
+	</div>
+</div>
 
 
 
