Create Shizuko's page

--- a/css/main.css
+++ b/css/main.css
@@ -130,3 +130,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 	list-style: none;
 }
+#shizuko ~ ul {
+	text-align: left;
+	list-style: none;
+}
