--- a/css/main.css
+++ b/css/main.css
@@ -134,3 +134,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 	list-style: none;
 }
+#reiko ~ ul {
+	text-align: left;
+	list-style: none;
+}
