--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 	list-style: none;
 }
+#rin ~ ul {
+	text-align: left;
+	list-style: none;
+}
