--- a/css/main.css
+++ b/css/main.css
@@ -142,3 +142,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 	list-style: none;
 }
+#dappercat ~ ul {
+	text-align: left;
+	list-style: none;
+}
