--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,6 +87,7 @@
                     <a href="https://www.instagram.com/devicatoutlet/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
                     <a href="https://twitter.com/DeviCatOutlet"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/channel/UC6beUHODrgLKEIXdY6VLp_A"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
+                    <a href="discord.gg/devicat"><i class="fab fa-discord fa-2x" aria-hidden="true"></i></a>
                 </p>
             </div>
         </div>
@@ -130,7 +131,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/7ee8f5aba7.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
     <script src="js/custom.js"></script>
   </body>
 </html>
