--- a/css/main.css
+++ b/css/main.css
@@ -160,3 +160,12 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 #art-tips ~ h3 img {
 	width: 1.25em;
 }
+
+#gratitude-board ~ p img {
+	width: 1.25em;
+}
+
+#gratitude-board ~ ul {
+	text-align: left;
+	list-style: none;
+}
