Rework home page into Markdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,13 @@
     {% if page.title == "Home" %}
     <!-- Jumbotron -->
     <section class="jumbotron text-center parallax">
-              <div id="twitch-embed">
-
-              </div>
+      <div></div>
+      <div id="twitch-embed"></div>
+      <div>
+        <a href="https://www.patreon.com/devicatoutlet"> <img src="img/patreon.png" alt=""></a><br>
+        <a href="https://discord.gg/devicat"> <img src="img/discord.png" alt=""></a>
+      </div>
+      <div></div>
     </section>
     {% endif %}
 
