--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,29 +22,36 @@
 
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-	 {% assign pages = "Home|Gallery|Art Tips|Characters|Goals|Shop|Gratitude Board|About" | split: "|" -%}
-	 {%- for dest in pages -%}
-	  {%- assign url = dest | downcase | replace: " ", "" -%}
-	  {%- if dest == "Home" -%} {%- assign url = "/" -%} {%- endif -%}
-	  {%- if dest == "Shop" -%} {%- assign url = "https://www.redbubble.com/people/devicatoutlet/shop/" -%} {%- endif -%}
-	  {%- if dest == "Characters" -%}
-          <li class="nav-item dropdown{% if page.title == dest %} active{% endif %}">
-            <a class="nav-link dropdown-toggle" href="{{ url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ dest }}{% if page.title == dest %}<span class="sr-only">(current)</span>{% endif %}</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="momoko">Momoko</a>
-                <a class="dropdown-item" href="shizuko">Shizuko</a>
-                <a class="dropdown-item" href="reiko">Reiko</a>
-                <a class="dropdown-item" href="rin">Rin</a>
-                <a class="dropdown-item" href="dappercat">DapperCat</a>
-                <a class="dropdown-item" href="catcupcakes">CatCupcakes</a>
-              </div>
-          </li>
-	  {%- else -%}
-          <li class="nav-item{% if page.title == dest %} active{% endif %}">
-            <a class="nav-link" href="{{ url }}">{{ dest }}{% if page.title == dest %}<span class="sr-only">(current)</span>{% endif %}</a>
-          </li>
-	  {%- endif -%}
-	 {% endfor -%}
+	  {%- for dest in site.nav %}{%- for info in dest -%}
+	    {%- if info[1].first -%}
+              {%- comment %} It's an array of subpages (eg Characters) {% endcomment -%}
+              {%- assign name = info[0] -%}
+	      {%- assign url = name | downcase | replace: " ", "" %}
+              <li class="nav-item dropdown{% if page.title == dest %} active{% endif %}">
+                <a class="nav-link dropdown-toggle" href="{{ url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ name }}{% if page.title == name %}<span class="sr-only">(current)</span>{% endif %}</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		{%- for subdest in info[1] -%}
+		  {%- assign url = subdest | downcase | replace: " ", "" %}
+                  <a class="dropdown-item" href="{{ url }}">{{ url }}</a>
+		{%- endfor %}
+                </div>
+              </li>
+	    {%- else -%}
+              {%- comment %} It's a single page (maybe with a specified URL) {% endcomment -%}
+              {%- if info[1] -%}
+                {%- assign name = info[0] -%}
+                {%- assign url = info[1] -%}
+              {%- else -%}
+                {%- assign name = dest -%}
+                {%- assign url = dest | downcase | replace: " ", "" -%}
+              {%- endif -%}
+              {%- if page.title == name -%}{%- assign active = " active" -%}{% capture current %}<span class="sr-only">(current)</span>{% endcapture -%}
+              {%- else %}{% assign active = "" %}{% assign current = "" %}{% endif %}
+              <li class="nav-item{{ active }}">
+                <a class="nav-link" href="{{ url }}">{{ name }}{{ current }}</a>
+              </li>
+	    {%- endif -%}
+          {%- endfor %}{% endfor %}
         </ul>
       </div>
     </nav>
