--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
                 <a class="nav-link dropdown-toggle" href="{{ url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ name }}{% if page.title == name %}<span class="sr-only">(current)</span>{% endif %}</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 		{%- for subdest in info[1] -%}
-		  {%- assign url = subdest | downcase | replace: " ", "" %}
+		  {%- assign url = subdest | downcase | replace: " ", "" | replace: ",", "-" %}
                   <a class="dropdown-item" href="{{ url }}">{{ subdest }}</a>
 		{%- endfor %}
                 </div>
