--- a/css/main.css
+++ b/css/main.css
@@ -215,3 +215,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	color: white;
 	background-color: #007bff;
 }
+
+#twitch ~ ul {
+	text-align: left;
+}
