--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,9 @@ h1#about, h1#home {
 	text-align: center;
 }
 
-#goals ~ p img {
+/* Some large SVGs get 'marked small' with asterisks - they're basically emoji. */
+em img {
 	width: 1.5em;
-}
-#goals ~ ul img {
-	width: 1.25em;
 }
 #goals ~ ul {
 	text-align: left;
@@ -120,9 +118,6 @@ h1#about, h1#home {
 	list-style: none;
 }
 
-#characters ~ p img {
-	width: 1.25em;
-}
 #characters ~ ul {
 	text-align: left;
 }
@@ -159,13 +154,6 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 }
 #art-tips ~ p {
 	text-align: left;
-}
-#art-tips ~ h3 img {
-	width: 1.25em;
-}
-
-#gratitude-board ~ p img {
-	width: 1.25em;
 }
 
 #gratitude-board ~ ul {
