--- a/css/main.css
+++ b/css/main.css
@@ -211,3 +211,11 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 #beginner-tips ~ ul {
 	text-align: left;
 }
+
+#twitch-sub-benefits ~ ul li {
+	list-style: none;
+	text-align: left;
+}
+#twitch-sub-benefits ~ p {
+	text-align: left;
+}
