--- a/css/main.css
+++ b/css/main.css
@@ -219,3 +219,8 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 #twitch-sub-benefits ~ p {
 	text-align: left;
 }
+
+#computer-specs ~ ul li {
+	list-style: none;
+	text-align: left;
+}
