De-stubbify CCB's info

--- a/css/main.css
+++ b/css/main.css
@@ -224,3 +224,11 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	list-style: none;
 	text-align: left;
 }
+
+#ccb-giveaways-currency-commands ~ ul li {
+	list-style: none;
+	text-align: left;
+}
+#ccb-giveaways-currency-commands ~ p {
+	text-align: left;
+}
