--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 }
 
-#beginner-tips ~ ul {
+#streaming-tips ~ ul {
 	text-align: left;
 }
 
@@ -225,11 +225,11 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 }
 
-#ccb-giveaways-currency-commands ~ ul li {
+#channel-info ~ ul li {
 	list-style: none;
 	text-align: left;
 }
-#ccb-giveaways-currency-commands ~ p {
+#channel-info ~ p {
 	text-align: left;
 }
 
