Correct Css Style For Channel Info Page
Correct Css style for channel info page. From channel-info to twitch-channel-info.

--- a/css/main.css
+++ b/css/main.css
@@ -225,11 +225,11 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 }
 
-#channel-info ~ ul li {
+#twitch-channel-info ~ ul li {
 	list-style: none;
 	text-align: left;
 }
-#channel-info ~ p {
+#twitch-channel-info ~ p {
 	text-align: left;
 }
 
