--- a/css/main.css
+++ b/css/main.css
@@ -225,11 +225,11 @@ pages, which should all be styled the same way. Maybe adjust the layout? */
 	text-align: left;
 }
 
-#twitch-channel-info ~ ul li {
+#channel-info ~ ul li {
 	list-style: none;
 	text-align: left;
 }
-#twitch-channel-info ~ p {
+#channel-info ~ p {
 	text-align: left;
 }
 
