--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
   </head>
 
-  <body>
+  <body class="{{ page.category | default: "devi" }}-cat">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ds">
