--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,16 @@ ul.sparkles li:before {
 	width: 1.5em;
 }
 
+.hearts:before, .hearts:after {
+	display: inline-block;
+	content: url("https://s.w.org/images/core/emoji/2.2.1/svg/1f49c.svg");
+	position: relative;
+	top: 0.5em; left: -0.25em;
+	margin-left: 0.4em;
+	margin-top: -0.25em;
+	width: 1.5em;
+}
+
 #gallery ~ p img {
 	max-height: 300px;
 	cursor: pointer;
