--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,8 @@ li {
 ul.bulleted li {
 	list-style: disc;
 }
-ul.sparkles li:before, #art-tips ~ h3:before {
+
+h3:before, h3:after {
 	display: inline-block;
 	content: url("https://s.w.org/images/core/emoji/2.2.1/svg/2728.svg");
 	position: relative;
