Clean up the use of left and center alignment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
   <div>
     <!-- Cards -->
   
-    <div class="container raised text-center">
+    <div class="container raised">
       {{ content }}
     </div>
   </div>
@@ -100,7 +100,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-muted footer-style">
+    <footer class="text-muted">
         <div class="container">
             <div class="row justify-content-center">
                 <p>
