Use friendly name for YT channel link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@
                     <a href="https://twitch.tv/DeviCat"><i class="fab fa-twitch fa-2x" aria-hidden="true"></i></a>
                     <a href="https://www.instagram.com/devicatoutlet/"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
                     <a href="https://twitter.com/DeviCatOutlet"><i class="fab fa-twitter fa-2x" aria-hidden="true"></i></a>
-                    <a href="https://www.youtube.com/channel/UC6beUHODrgLKEIXdY6VLp_A"><i class="fab fa-youtube fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.youtube.com/DeviCatTV"><i class="fab fa-youtube fa-2x" aria-hidden="true"></i></a>
                     <a href="https://discord.gg/devicat"><i class="fab fa-discord fa-2x" aria-hidden="true"></i></a>
                     <a href="https://www.patreon.com/devicatoutlet"><i class="fab fa-patreon fa-2x" aria-hidden="true"></i></a>
                 </p>
