Improve page load by inlining the tiny bit of custom JS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,6 +128,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
-    <script src="js/custom.js"></script>
+<script>
+    $('#gallery ~ p img').click(function() {
+        $('.imagepreview').attr('src', $(this).attr('src'));
+        //$('#modal-caption').text($(this).attr('alt')); //TODO: Style these up nicely and then enable them
+        $('#imagemodal').modal('show');
+    });
+</script>
   </body>
 </html>
