--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
               {%- assign name = info[0] -%}
 	      {%- assign url = name | downcase | replace: " ", "" %}
               <li class="nav-item dropdown{% if page.title == name %} active{% endif %}">
-                <a class="nav-link dropdown-toggle" href="{{ url }}" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ name }}{% if page.title == name %}<span class="sr-only">(current)</span>{% endif %}</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="nav-link dropdown-toggle" href="{{ url }}" id="dropdown-{{ url }}" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ name }}{% if page.title == name %}<span class="sr-only">(current)</span>{% endif %}</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-{{ url }}">
 		{%- for subdest in info[1] -%}
 		  {%- assign url = subdest | downcase | replace: " ", "" | replace: ",", "-" %}
                   <a class="dropdown-item" href="{{ url }}">{{ subdest }}</a>
