Provide initial placeholder image and alt text for popup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
   </div>
 
 <div id=fader></div>
-<div id="popup"><div><img><div id="popup-caption"></div></div></div>
+<div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]"><div id="popup-caption"></div></div></div>
 
 
 
