Identify the Twitch embed section for the benefit of screenreaders

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
     </nav>
     {% if page.title == "Home" %}
     <section class="jumbotron text-center parallax">
+      <h2 class="sr-only">Embedded Twitch stream</h2>
       <div></div>
       <div id="twitch-embed"></div>
       <div>
