--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body class="{{ page.category | default: "devi" }}-cat">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top ds">
+    <nav class="navbar-expand-md navbar-light">
       <a class="navbar-brand" href="/">
           <img src="img/mainbanner.png" alt="DeviCat">
       </a>
