Select items as children of a parent
It's kinda like how my human siblings are all identified, only we have two
parents that you can select us by. Imagine how hard CSS would be if you had
to cope with multiple parents...

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdown-{{ url }}">
 		{%- for subdest in info[1] -%}
 		  {%- assign url = subdest | downcase | replace: " ", "" | replace: ",", "-" %}
-                  <a class="dropdown-item" href="{{ url }}">{{ subdest }}</a>
+                  <a href="{{ url }}">{{ subdest }}</a>
 		{%- endfor %}
                 </div>
               </li>
